samples/_failures_safe/1761004919_4f5cc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8150320a.c: In function ‘main’:
./samples/SAFE/__tmp_8150320a.c:118:5: error: expected identifier or ‘(’ at end of input
  118 |     int
      |     ^~~
./samples/SAFE/__tmp_8150320a.c:118:5: error: expected declaration or statement at end of input
